force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Labor_Cost__c</fullName>
    <formula>Fcst_Contract_Labor_Hours__c *  Fcst_Contract_Labor_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>