force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Labor_Rate__c</fullName>
    <formula>Margin_Assumption__r.Labor_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Labor Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>