force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Materials_Non_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Materials_Non_Quoted__c</fullName>
    <formula>Margin_Assumption__r.Materials_Non__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Materials - Non Quoted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>