force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Materials_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Materials_Quoted__c</fullName>
    <formula>New_Contract_Materials__c  * (1 +  Material_Inflation_Adj__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Materials Quoted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>