force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Outside_Processes__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Outside_Processes__c</fullName>
    <formula>Margin_Assumption__r.Outside_Processes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Outside Processes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>