force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Standard_Materials__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Standard_Materials__c</fullName>
    <formula>Fcst_Contract_Base_Materials__c +  Fcst_Contract_eDrive_Materials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Standard Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>