force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Total_Cost__c</fullName>
    <formula>Fcst_Contract_Standard_Materials__c + Fcst_Contract_Overhead__c + Fcst_Contract_Labor_Cost__c + Fcst_Contract_Int_Std_Warranty__c  +  Fcst_Contract_Ext_Pur_Warranty__c  + Fcst_Contract_Total_Delivery_Cost__c  + Fcst_Contract_Other_COS_Allocation__c + Fcst_Contract_Outside_Processes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>