force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Total_Delivery_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Total_Delivery_Cost__c</fullName>
    <formula>(Fcst_Contract_Delivery_Miles__c *  Fcst_Contract_Delivery_Rate__c ) + Fcst_Contract_Delivery_Incidentals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Total Delivery Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>