force-app/main/default/objects/Sales_Order__c/fields/Fcst_Mode_Adder__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Mode_Adder__c</fullName>
    <formula>IF(text(Mode__c) = &apos;Diesel&apos;, Margin_Assumption__r.Diesel_Mode_Adder__c , 
IF(text(Mode__c) = &apos;CNG&apos;, Margin_Assumption__r.CNG_Mode_Adder__c, 
IF(text(Mode__c) = &apos;Electric&apos;, Margin_Assumption__r.Electric_Mode_Adder__c, Margin_Assumption__r.Hybrid_Mode_Adder__c) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Mode Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>