force-app/main/default/objects/Sales_Order__c/fields/Final_BOM_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_BOM_Release_Date__c</fullName>
    <label>Final BOM Release Date</label>
    <type>Date</type>
</CustomField>