force-app/main/default/objects/Sales_Order__c/fields/Finance_GM__c.field-meta.xml
<CustomField>
    <fullName>Finance_GM__c</fullName>
    <label>Finance GM%</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>