force-app/main/default/objects/Sales_Order__c/fields/Finance_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Finance_Labor_Hours__c</fullName>
    <label>Finance Labor Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>