force-app/main/default/objects/Sales_Order__c/fields/Finance_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Finance_Labor_Rate__c</fullName>
    <label>Finance Labor Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>