force-app/main/default/objects/Sales_Order__c/fields/Finance_OH_Rate_per_Bus__c.field-meta.xml
<CustomField>
    <fullName>Finance_OH_Rate_per_Bus__c</fullName>
    <label>Finance OH Rate per Bus</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>