force-app/main/default/objects/Sales_Order__c/fields/Finance_PPI__c.field-meta.xml
<CustomField>
    <fullName>Finance_PPI__c</fullName>
    <label>Finance PPI %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>