force-app/main/default/objects/Sales_Order__c/fields/Finance_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Finance_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>