force-app/main/default/objects/Sales_Order__c/fields/Finance_Std_Materials__c.field-meta.xml
<CustomField>
    <fullName>Finance_Std_Materials__c</fullName>
    <label>Finance Std Materials</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>