force-app/main/default/objects/Sales_Order__c/fields/Forecasted_Margin__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Margin__c</fullName>
    <label>Forecasted Margin</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>