force-app/main/default/objects/Sales_Order__c/fields/Front_Axle__c.field-meta.xml
<CustomField>
    <fullName>Front_Axle__c</fullName>
    <label>Front Axle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Length__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FH946</fullName>
            </value>
            <value>
                <fullName>MFS12155</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>