force-app/main/default/objects/Sales_Order__c/fields/Front_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Front_Suspension__c</fullName>
    <label>Front Suspension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GILLIG</fullName>
            </value>
            <value>
                <fullName>HENDRICKSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>