force-app/main/default/objects/Sales_Order__c/fields/Hold_Manuals__c.field-meta.xml
<CustomField>
    <fullName>Hold_Manuals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>