force-app/main/default/objects/Sales_Order__c/fields/Horse_Power__c.field-meta.xml
<CustomField>
    <fullName>Horse_Power__c</fullName>
    <label>Horse Power</label>
    <length>10</length>
    <type>Text</type>
</CustomField>