force-app/main/default/objects/Sales_Order__c/fields/HVAC_System__c.field-meta.xml
<CustomField>
    <fullName>HVAC_System__c</fullName>
    <label>HVAC System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Thermo King</fullName>
            </value>
            <value>
                <fullName>Moblie Climate Control</fullName>
            </value>
            <value>
                <fullName>Sutrak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>