force-app/main/default/objects/Sales_Order__c/fields/Initial_Delivery_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Initial_Delivery_Requirement__c</fullName>
    <formula>Reference_Contract__r.Initial_Delivery_Requirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Delivery Requirement</label>
    <type>Text</type>
</CustomField>