force-app/main/default/objects/Sales_Order__c/fields/Invoice_Information__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Information for Invoicing the selected order</description>
    <label>Invoice Information</label>
    <referenceTo>Bus_Invoice_Information__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>