force-app/main/default/objects/Sales_Order__c/fields/ITS_Deliverables_Due__c.field-meta.xml
<CustomField>
    <fullName>ITS_Deliverables_Due__c</fullName>
    <formula>Start_Date__c -(20*7)</formula>
    <label>ITS Deliverables Due</label>
    <type>Date</type>
</CustomField>