force-app/main/default/objects/Sales_Order__c/fields/ITS_System__c.field-meta.xml
<CustomField>
    <fullName>ITS_System__c</fullName>
    <label>ITS System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avail</fullName>
            </value>
            <value>
                <fullName>Clever</fullName>
            </value>
            <value>
                <fullName>ACS</fullName>
                <label>Conduent (ACS)</label>
            </value>
            <value>
                <fullName>Connexionz</fullName>
            </value>
            <value>
                <fullName>Digital Recorders</fullName>
            </value>
            <value>
                <fullName>DoubleMap</fullName>
            </value>
            <value>
                <fullName>ETA Transit Systems</fullName>
            </value>
            <value>
                <fullName>Greyhawk</fullName>
            </value>
            <value>
                <fullName>Hanover</fullName>
            </value>
            <value>
                <fullName>Init</fullName>
            </value>
            <value>
                <fullName>Integrated System Research (ISR)</fullName>
                <label>Integrated System Research (ISR Transit)</label>
            </value>
            <value>
                <fullName>Mentor</fullName>
            </value>
            <value>
                <fullName>Nextbus</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pasio</fullName>
            </value>
            <value>
                <fullName>Routematch</fullName>
            </value>
            <value>
                <fullName>Strategic Mapping</fullName>
            </value>
            <value>
                <fullName>Syncromatics</fullName>
            </value>
            <value>
                <fullName>Transitfare</fullName>
            </value>
            <value>
                <fullName>TripSpark</fullName>
            </value>
            <value>
                <fullName>Vontas Novus</fullName>
            </value>
            <value>
                <fullName>Vontas TransitMaster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>