force-app/main/default/objects/Sales_Order__c/fields/ITS_System_Type__c.field-meta.xml
<CustomField>
    <fullName>ITS_System_Type__c</fullName>
    <label>ITS System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-wire</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>