force-app/main/default/objects/Sales_Order__c/fields/Labor__c.field-meta.xml
<CustomField>
    <fullName>Labor__c</fullName>
    <formula>IF( text(Mode__c) = &quot;CNG&quot;, 
( 
IF(text(Length__c) = &quot;29&quot;, Margin_Assumption__r.CNG_29_Labor_Hours__c, 
IF(text(Length__c) = &quot;35&quot;, Margin_Assumption__r.CNG_35_Labor_Hours__c, 
IF(text(Length__c) = &quot;40&quot;, Margin_Assumption__r.CNG_40_Labor_Hours__c, 0) ) ) 
), 
IF(text(Mode__c) =  &quot;Diesel&quot;, 
( 
IF(text(Length__c) = &quot;29&quot;, Margin_Assumption__r.Diesel_29_Labor_Hours__c, 
IF(text(Length__c) = &quot;35&quot;, Margin_Assumption__r.Diesel_35_Labor_Hours__c, 
IF(text(Length__c) = &quot;40&quot;, Margin_Assumption__r.Diesel_40_Labor_Hours__c, 0) ) ) 
), 
IF(CONTAINS(text(Mode__c), &quot;Hybrid&quot;), 
( 
IF(text(Length__c) = &quot;29&quot;, Margin_Assumption__r.Hybrid_29_Labor_Hours__c, 
IF(text(Length__c) = &quot;35&quot;, Margin_Assumption__r.Hybrid_35_Labor_Hours__c, 
IF(text(Length__c) = &quot;40&quot;, Margin_Assumption__r.Hybrid_40_Labor_Hours__c, 0) ) ) 
), 
IF(text(Mode__c) = &quot;Electric&quot;, 
( 
IF(text(Length__c) =  &quot;29&quot;, Margin_Assumption__r.Electric_29_Labor_Hours__c, 
IF(text(Length__c) = &quot;35&quot;, Margin_Assumption__r.Electric_35_Labor_Hours__c, 
IF(text(Length__c) = &quot;40&quot;, Margin_Assumption__r.Electric_40_Labor_Hours__c, 0) ) ) 
),0 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>