force-app/main/default/objects/Sales_Order__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>29</fullName>
                <color>#0B6FCE</color>
                <label>29</label>
            </value>
            <value>
                <fullName>35</fullName>
                <color>#78C953</color>
                <label>35</label>
            </value>
            <value>
                <fullName>40</fullName>
                <color>#E27001</color>
                <label>40</label>
            </value>
            <value>
                <fullName>60</fullName>
                <color>#A845DC</color>
                <label>60</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>