force-app/main/default/objects/Sales_Order__c/fields/Letter_Code__c.field-meta.xml
<CustomField>
    <fullName>Letter_Code__c</fullName>
    <description>The Model or Line letter code used in the VIN</description>
    <inlineHelpText>E = Incomplete Vehicle
G = Low Floor Bus</inlineHelpText>
    <label>Letter Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
                <default>true</default>
                <label>G</label>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>