force-app/main/default/objects/Sales_Order__c/fields/Letter_Due__c.field-meta.xml
<CustomField>
    <fullName>Letter_Due__c</fullName>
    <label>Letter Due</label>
    <type>Date</type>
</CustomField>