force-app/main/default/objects/Sales_Order__c/fields/Letter_Response__c.field-meta.xml
<CustomField>
    <fullName>Letter_Response__c</fullName>
    <label>Letter Response</label>
    <type>Date</type>
</CustomField>