force-app/main/default/objects/Sales_Order__c/fields/Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Letter_Sent__c</fullName>
    <label>Letter Sent</label>
    <type>Date</type>
</CustomField>