force-app/main/default/objects/Sales_Order__c/fields/Line_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Line_Quantity__c</fullName>
    <label>Line Quantity</label>
    <summarizedField>Opportunity_Sales_Order__c.Quantity__c</summarizedField>
    <summaryForeignKey>Opportunity_Sales_Order__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>