force-app/main/default/objects/Sales_Order__c/fields/Manual_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adjustment__c</fullName>
    <label>Manual Cost Adjustment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>