force-app/main/default/objects/Sales_Order__c/fields/Manual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Completion_Date__c</fullName>
    <description>When all four manuals have been sent, this date reflects when the final item was sent to the customer.</description>
    <inlineHelpText>Date all four manual PDFs were completed and delivered.</inlineHelpText>
    <label>Manuals Done</label>
    <type>Date</type>
</CustomField>