force-app/main/default/objects/Sales_Order__c/fields/Manual_FTP_Link__c.field-meta.xml
<CustomField>
    <fullName>Manual_FTP_Link__c</fullName>
    <inlineHelpText>Link to top-level customer folder, in which sit the VIN folders with manuals.</inlineHelpText>
    <label>Manuals FTP</label>
    <type>Url</type>
</CustomField>