force-app/main/default/objects/Sales_Order__c/fields/Manual_FTP_Processor__c.field-meta.xml
<CustomField>
    <fullName>Manual_FTP_Processor__c</fullName>
    <label>Manual FTP Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publications_Order_Processors</valueSetName>
    </valueSet>
</CustomField>