force-app/main/default/objects/Sales_Order__c/fields/Manual_FTP_Site_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Manual_FTP_Site_Expiration__c</fullName>
    <label>Manual FTP Site Expiration</label>
    <type>Date</type>
</CustomField>