force-app/main/default/objects/Sales_Order__c/fields/Manual_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manual_Notes__c</fullName>
    <label>Manual Notes</label>
    <type>TextArea</type>
</CustomField>