force-app/main/default/objects/Sales_Order__c/fields/Manuals_FTP_Link__c.field-meta.xml
<CustomField>
    <fullName>Manuals_FTP_Link__c</fullName>
    <formula>Account__r.Manuals_FTP__c</formula>
    <label>Manuals FTP Link</label>
    <type>Text</type>
</CustomField>