force-app/main/default/objects/Sales_Order__c/fields/Manuals_Samples_Sent__c.field-meta.xml
<CustomField>
    <fullName>Manuals_Samples_Sent__c</fullName>
    <label>Manuals Samples Sent</label>
    <type>Date</type>
</CustomField>