force-app/main/default/objects/Sales_Order__c/fields/Manuals_USB_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Manuals_USB_Ordered__c</fullName>
    <label>Manuals USB Ordered</label>
    <type>Date</type>
</CustomField>