force-app/main/default/objects/Sales_Order__c/fields/Manuals_USB_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Manuals_USB_Tracking__c</fullName>
    <label>Manuals USB Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>