force-app/main/default/objects/Sales_Order__c/fields/Margin_Actual_Ext_Pur_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Margin_Actual_Ext_Pur_Warranty__c</fullName>
    <label>Margin Actual Ext Pur Warranty</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>