force-app/main/default/objects/Sales_Order__c/fields/Margin_Actual_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Margin_Actual_Labor_Cost__c</fullName>
    <formula>Margin_Actual_Labor_Hours__c *  Margin_Actual_Labor_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Actual Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>