force-app/main/default/objects/Sales_Order__c/fields/Margin_Actual_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Margin_Actual_Labor_Hours__c</fullName>
    <label>Margin Actual Labor Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>