force-app/main/default/objects/Sales_Order__c/fields/Margin_Actual_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Margin_Actual_Labor_Rate__c</fullName>
    <label>Margin Actual Labor Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>