force-app/main/default/objects/Sales_Order__c/fields/Margin_Actual_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Margin_Actual_Material_Cost__c</fullName>
    <label>Margin Actual Material Cost</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>