force-app/main/default/objects/Sales_Order__c/fields/Margin_Actual_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Margin_Actual_Net_Revenue__c</fullName>
    <formula>Margin_Actual_Price__c -  Margin_Actual_Tax__c -  Margin_Actual_Spare_Tooling_Budget__c -  Margin_Actual_Training_Revenue_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Actual Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>