force-app/main/default/objects/Sales_Order__c/fields/Margin_Actual_Other_COS_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Margin_Actual_Other_COS_Allocation__c</fullName>
    <label>Margin Actual Other COS Allocation</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>