force-app/main/default/objects/Sales_Order__c/fields/Margin_Actual_Price__c.field-meta.xml
<CustomField>
    <fullName>Margin_Actual_Price__c</fullName>
    <label>Margin Actual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>