force-app/main/default/objects/Sales_Order__c/fields/Margin_Assumption__c.field-meta.xml
<CustomField>
    <fullName>Margin_Assumption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Margin Assumption</label>
    <referenceTo>Margin_Assumption__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>