force-app/main/default/objects/Sales_Order__c/fields/Margin_Assumption_on_Options__c.field-meta.xml
<CustomField>
    <fullName>Margin_Assumption_on_Options__c</fullName>
    <formula>Margin_Assumption__r.Options_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Assumption on Options</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>