force-app/main/default/objects/Sales_Order__c/fields/Margin_Base_Materials__c.field-meta.xml
<CustomField>
    <fullName>Margin_Base_Materials__c</fullName>
    <formula>Margin_Ref_SO_Base_Materials__c *( 1 + Material_Inflation_Adj__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Base Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>