force-app/main/default/objects/Sales_Order__c/fields/Margin_eDrive_Materials__c.field-meta.xml
<CustomField>
    <fullName>Margin_eDrive_Materials__c</fullName>
    <formula>IF( text(Battery_Configuration__c) =  text(Margin_Assumption__r.Battery_Configuration_1__c) ,  Margin_Assumption__r.Battery_Cost_1__c ,  IF(text(Battery_Configuration__c) =  text(Margin_Assumption__r.Battery_Configuration_2__c), Margin_Assumption__r.Battery_Cost_1__c, IF(text(Battery_Configuration__c) =  text(Margin_Assumption__r.Battery_Configuration_3__c), Margin_Assumption__r.Battery_Cost_3__c, 0) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin eDrive Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>