force-app/main/default/objects/Sales_Order__c/fields/Margin_Ref_SO_Booked_Year__c.field-meta.xml
<CustomField>
    <fullName>Margin_Ref_SO_Booked_Year__c</fullName>
    <formula>Margin_Reference_Sales_Order__r.Date_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Ref SO Booked Year</label>
    <type>Date</type>
</CustomField>